--- a/style.css
+++ b/style.css
@@ -41,6 +41,11 @@ nav {
     align-items: center;
     border-bottom: solid 1px rgba(255,255,255,.1);
 }
+nav .navbar-left,
+nav .navbar-right {
+    flex-basis: 0;
+    flex-grow: 1;
+}
 nav .navbar-left img {
     max-width: 120px;
 }
